--- a/JsonBlazer.csproj
+++ b/JsonBlazer.csproj
@@ -9,12 +9,14 @@
 
   <ItemGroup>
     <PackageReference Include="BlazorMonaco" Version="3.3.0" />
+    <PackageReference Include="JsonPath.Net" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.7" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.8" />
     <PackageReference Include="MudBlazor" Version="8.12.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NJsonSchema" Version="11.4.0" />
     <PackageReference Include="System.Text.Json" Version="9.0.8" />
   </ItemGroup>
 
